--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ ul {
     scale 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-close {
+.modal__button {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -273,14 +273,14 @@ ul {
   cursor: pointer;
 }
 
-.button-close .icon {
+.modal__icon {
   width: 100%;
   height: 100%;
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-close:hover .icon {
+.modal__button:hover .modal__icon {
   fill: var(--accent-color);
 }
 
@@ -288,7 +288,7 @@ ul {
 textarea {
   resize: none;
 }
-.form-title {
+.modal__title {
   margin-bottom: 12px;
 
   font-weight: 700;
@@ -301,7 +301,7 @@ textarea {
   margin-right: auto;
 }
 
-.form-field {
+.form__field {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -309,11 +309,11 @@ textarea {
   margin-bottom: 10px;
 }
 
-.form-field:nth-child(4) {
+.form__field:nth-child(4) {
   margin-bottom: 20px;
 }
 
-.form-label {
+.form__label {
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.16;
@@ -322,7 +322,7 @@ textarea {
   color: var(--secondary-txt-color);
 }
 
-.form-input {
+.form__input {
   width: 100%;
   height: 40px;
 
@@ -333,13 +333,13 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus,
-.form-comment:focus {
+.form__input:focus,
+.form__comment:focus {
   border: 1px solid #2196f3;
   outline: none;
 }
 
-.form-comment {
+.form__comment {
   width: 100%;
   height: 138px;
   padding-top: 12px;
@@ -350,7 +350,7 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field textarea::placeholder {
+.form__field textarea::placeholder {
   font-size: 14px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -358,30 +358,30 @@ textarea {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form-icon {
+.form__icon {
   position: absolute;
   top: 50%;
   left: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field:focus-within > .form-icon {
+.form__field:focus-within > .form__icon {
   fill: var(--accent-color);
 }
 
 /* check box */
-.check-box-text {
+.form__text {
   text-align: center;
   line-height: 1.71;
   color: var(--secondary-txt-color);
 }
 
-.check-box-text a {
+.form__text a {
   color: var(--accent-color);
   text-decoration: underline;
 }
 
-.checkbox {
+.form__checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -395,12 +395,12 @@ textarea {
   overflow: hidden;
 }
 
-.check-field {
+.form__checkfield {
   display: flex;
   align-items: center;
 }
 
-.check-icon {
+.form__check {
   display: flex;
   align-items: center;
 
@@ -414,13 +414,13 @@ textarea {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked + .check-icon {
+.form__checkbox:checked + .form__check {
   background-color: #2196f3;
   border-color: var(--accent-color);
 }
 
 /* button submit */
-.submit-button {
+.form__submit {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -628,7 +628,7 @@ img {
 /* buttons */
 
 .button,
-.filter-button {
+.filter__button {
   display: inline-block;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -644,7 +644,7 @@ img {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.filter-button {
+.filter__button {
   min-width: 73px;
   padding: 6px 22px 6px 22px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -655,12 +655,6 @@ img {
 .button:hover,
 .button:focus {
   color: var(--accent-color);
-}
-
-.filter-button:hover,
-.filter-button:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 button {
@@ -676,14 +670,16 @@ button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter__button:hover,
+.filter__button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Portfolio examples */
-.example-title {
+.examples__title {
   color: var(--main-txt-color);
   font-weight: 700;
   font-size: 18px;
@@ -691,13 +687,13 @@ button {
   letter-spacing: 0.06em;
 }
 
-.example-description {
+.examples__description {
   color: var(--secondary-txt-color);
   font-size: 16px;
   line-height: 30px;
 }
 
-.examples-div {
+.examples__general {
   padding: 20px 24px;
 }
 
@@ -708,17 +704,17 @@ button {
   margin-bottom: 50px;
 }
 
-.filter-item {
+.filter__item {
   display: flex;
   margin-right: 8px;
   text-align: center;
 }
 
-.filter-item:last-child {
+.filter__item:last-child {
   margin-right: 0px;
 }
 
-.filter-button {
+.filter__button {
   display: block;
   align-items: center;
 }
@@ -736,13 +732,13 @@ button {
   margin-left: -30px;
 }
 
-.examples-item {
+.examples__item {
   flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
 }
 
-.examples-link {
+.examples__link {
   display: block;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -750,23 +746,24 @@ button {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-link:hover,
-.examples-link:focus {
+.examples__link:hover,
+.examples__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* Card */
-.example-description {
-  margin-top: 10px;
-}
 
 .card-content {
   position: relative;
   overflow: hidden;
 }
 
-.examples-overlay {
+.examples__description {
+  margin-top: 10px;
+}
+
+.card-content__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -785,12 +782,12 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-link:hover .examples-overlay,
-.examples-link:focus .examples-overlay {
+.examples__link:hover .card-content__overlay,
+.examples__link:focus .card-content__overlay {
   transform: translateY(0);
 }
 
-.examples-content {
+.card-content__text {
   margin: 0;
   color: var(--primary-white-color);
   font-size: 18px;
