--- a/css/styles.css
+++ b/css/styles.css
@@ -23,17 +23,6 @@ body {
   line-height: 1.14;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-span {
-  margin: 0;
-}
-
 /* Container */
 .container {
   margin-left: auto;
@@ -44,16 +33,6 @@ span {
   /* outline: 2px solid tomato; */
 }
 /* Утилиты */
-
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 
 .page-header {
   border-bottom: 1px solid #ececec;
@@ -143,6 +122,9 @@ ul {
   display: flex;
 }
 
+/* Сделано */
+
+/* Contatcs  */
 .contacts-nav {
   display: flex;
   margin-left: auto;
