--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,27 @@
 @import "./components.scss/contacts-nav";
 
 @import "./components.scss/_hero.scss";
+
+@import "./components.scss/modal";
+
+@import "./components.scss/basic-form";
+
+@import "./components.scss/features";
+
+@import "./components.scss/work";
+
+@import "./components.scss/team";
+
+@import "./components.scss/clients";
+
+@import "./components.scss/page-footer";
+
+@import "./components.scss/footer-social";
+
+@import "./components.scss/_footer-subscribe";
+
+@import "./components.scss/portfolio-filter";
+
+@import "./components.scss/portfolio-examples";
+
+@import "./components.scss/portfolio-card";
