--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -2,7 +2,7 @@ body {
   background-color: $primary-white-color;
   color: $main-txt-color;
 
-  font-family: Roboto, sans-serif;
+  font-family: $main-font;
   letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.14;
@@ -14,4 +14,38 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+.button,
+.filter__button {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  min-width: 200px;
+  padding: 10px 32px 10px 32px;
+
+  background-color: $button-bcg-color;
+  color: $main-txt-color;
+
+  font-size: 16px;
+  line-height: 1.62;
+  font-weight: 500;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
