--- a/sass/components.scss/_contacts-nav.scss
+++ b/sass/components.scss/_contacts-nav.scss
@@ -33,7 +33,7 @@
   &:hover,
   &:focus {
     color: $accent-color;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: $main-shadow;
   }
 }
 
