--- a/sass/components.scss/_hero.scss
+++ b/sass/components.scss/_hero.scss
@@ -25,3 +25,13 @@
   line-height: 1.3;
   letter-spacing: 0.06em;
 }
+
+.button.primary {
+  background-color: $accent-color;
+  color: $primary-white-color;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  box-shadow: $main-shadow;
+}
