--- a/sass/components.scss/_page-header.scss
+++ b/sass/components.scss/_page-header.scss
@@ -4,7 +4,7 @@
 
 .page-header__logo {
   color: $logo-color-header;
-  font-family: Raleway, sans-serif;
+  font-family: $secondary-font;
   font-weight: 700;
 
   font-size: 26px;
@@ -52,7 +52,7 @@
 
   &:hover,
   &:focus {
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: $main-shadow;
     color: $accent-color;
   }
 }
