--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -1,3 +1,24 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: $primary-white-color;
   color: $main-txt-color;
@@ -21,6 +42,21 @@ body {
   padding-bottom: 94px;
   padding-left: 0;
   padding-right: 0;
+}
+
+.section--nopaddingtop {
+  padding-top: 0;
+}
+
+.section__title {
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  font-weight: 700;
+}
+
+.section--background {
+  background-color: $team-bcg-color;
 }
 
 button {
