--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,14 +1,7 @@
-.client__list {
+.client {
+  margin-top: 50px;
+
   display: flex;
-}
-
-.client__title {
-  margin-bottom: 50px;
-
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  font-weight: 700;
 }
 
 .client__item {
