--- a/sass/components/_portfolio-card.scss
+++ b/sass/components/_portfolio-card.scss
@@ -1,4 +1,4 @@
-.card-content {
+.examples__content {
   position: relative;
   overflow: hidden;
 }
@@ -7,7 +7,7 @@
   margin-top: 10px;
 }
 
-.card-content__overlay {
+.examples__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -26,12 +26,12 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples__link:hover .card-content__overlay,
-.examples__link:focus .card-content__overlay {
+.examples__link:hover .examples__overlay,
+.examples__link:focus .examples__overlay {
   transform: translateY(0);
 }
 
-.card-content__text {
+.examples__text {
   margin: 0;
   color: $primary-white-color;
   font-size: 18px;
