--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,13 +1,10 @@
 .team {
-  background-color: $team-bcg-color;
-}
-
-.team__list {
+  margin-top: 50px;
   display: flex;
   justify-content: center;
 }
 
-.team__description {
+.team__item {
   margin-right: 30px;
   box-shadow: $box-shadow;
 
@@ -16,7 +13,7 @@
   }
 }
 
-.team__general {
+.team__box {
   padding-top: 30px;
   padding-bottom: 30px;
 
@@ -31,7 +28,6 @@
   text-align: center;
   font-weight: 700;
 }
-
 .team__person {
   font-weight: 500;
   font-size: 16px;
@@ -48,12 +44,12 @@
   margin-bottom: 16px;
 }
 
-.team-icons {
+.social {
   display: flex;
   justify-content: center;
 }
 
-.team-icons__item {
+.social__item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
@@ -63,7 +59,7 @@
   }
 }
 
-.team-icons__link {
+.social__link {
   display: flex;
   width: 100%;
   height: 100%;
@@ -78,14 +74,14 @@
   }
 }
 
-.team-icons__icon {
+.social__icon {
   justify-content: center;
   fill: #afb1b8;
   margin: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icons__link:hover .team-icons__icon,
-.team-icons__link:focus .team-icons__icon {
+.social__link:hover .social__icon,
+.social__link:focus .social__icon {
   fill: $primary-white-color;
 }
